commit translated contents

--- a/docs/visual-basic/misc/bc30103.md
+++ b/docs/visual-basic/misc/bc30103.md
@@ -1,5 +1,5 @@
 ---
-title: "'!' richiede la sua sinistra operando per avere un parametro di tipo, classe o tipo di interfaccia, ma questo operando ha il tipo '<type>'"
+title: "'!' richiede che l'operando sinistro abbia un parametro di tipo, una classe o un tipo di interfaccia, ma questo operando ha il tipo ' <type> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30103
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30103
 ms.assetid: 95982e5e-c3e5-402e-ad7b-4c5076a13869
-ms.openlocfilehash: 94f790f23153e3b79e8b2882f4ac7b6d41ea39b5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ca5cf8c1bd4b3c41495a58ff79ff2ef00072d6cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627328"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380406"
 ---
-# <a name="-requires-its-left-operand-to-have-a-type-parameter-class-or-interface-type-but-this-operand-has-the-type-type"></a>'!' richiede la sua sinistra operando per avere un parametro di tipo, classe o tipo di interfaccia, ma questo operando ha il tipo '\<tipo >'
+# <a name="-requires-its-left-operand-to-have-a-type-parameter-class-or-interface-type-but-this-operand-has-the-type-type"></a>'!' richiede che l'operando sinistro abbia un parametro di tipo, una classe o un tipo di interfaccia, ma questo operando ha il tipo ' \<type> '
 L'accesso ai membri dizionario, che usa un punto esclamativo (`!`) anziché un punto (`.`), è valido solo in una classe o in un'interfaccia.  
   
  **ID errore:** BC30103  
@@ -25,4 +25,4 @@ L'accesso ai membri dizionario, che usa un punto esclamativo (`!`) anziché un p
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Caratteri speciali nel codice](../../visual-basic/programming-guide/program-structure/special-characters-in-code.md)
+- [Caratteri speciali nel codice](../programming-guide/program-structure/special-characters-in-code.md)
