--- a/docs/visual-basic/misc/bc32006.md
+++ b/docs/visual-basic/misc/bc32006.md
@@ -1,5 +1,5 @@
 ---
-title: I valori 'Char' non possono essere convertiti in '<typename>'
+title: Non è possibile convertire i valori ' Char ' in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32006
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32006
 ms.assetid: c033f65e-a315-47fc-be2e-ed371847a221
-ms.openlocfilehash: a58d2df1e5e44bf4ade6529d16937550d2eb94a0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 825193703e5a332f138a18f9b9b050fa4abf97d1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64661104"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379848"
 ---
-# <a name="char-values-cannot-be-converted-to-typename"></a>I valori 'Char' non possono essere convertiti in '\<nomeTipo >'
-I valori 'Char' non possono essere convertiti in '\<nomeTipo >'. Usare 'Microsoft.VisualBasic.AscW' per interpretare un carattere come valore Unicode o 'Microsoft.VisualBasic.Val' per interpretarlo come cifra.  
+# <a name="char-values-cannot-be-converted-to-typename"></a>Non è possibile convertire i valori ' Char ' in ' \<typename> '
+Non è possibile convertire i valori ' Char ' in ' \<typename> '. Usare 'Microsoft.VisualBasic.AscW' per interpretare un carattere come valore Unicode o 'Microsoft.VisualBasic.Val' per interpretarlo come cifra.  
   
  Un'espressione tenta di convertire un valore `Char` in un tipo di dati diverso da `String` o `Object`.  
   
@@ -27,4 +27,4 @@ I valori 'Char' non possono essere convertiti in '\<nomeTipo >'. Usare 'Microsof
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipo di dati Char](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [Tipo di dati Char](../language-reference/data-types/char-data-type.md)
