--- a/docs/visual-basic/misc/bc36007.md
+++ b/docs/visual-basic/misc/bc36007.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36007
 ms.assetid: 10fb31ba-9b6c-403f-bacc-c7b5df14f1dd
-ms.openlocfilehash: 1da71a9ff511b1ed6856db4872bad4e73518ba3a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 516304067059bbd92420c2a7ee41469548cb55a4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64631852"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379147"
 ---
 # <a name="end-using-must-be-preceded-by-a-matching-using"></a>'End Using' deve essere preceduto da un 'Using' corrispondente
 È presente un'istruzione `End Using` non preceduta da una dichiarazione `Using` corrispondente.  
@@ -23,10 +23,10 @@ ms.locfileid: "64631852"
   
 - Rimuovere l'istruzione `End Using` se è ridondante.  
   
-- Fornire il mancante [istruzione Using](../../visual-basic/language-reference/statements/using-statement.md) se manca uno.  
+- Specificare l' [istruzione using](../language-reference/statements/using-statement.md) mancante se non ne è presente una.  
   
 - Spostare l'istruzione `End Using` nella posizione appropriata nel codice.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Fine \<parola chiave > istruzione](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [\<keyword>Istruzione End](../language-reference/statements/end-keyword-statement.md)
