--- a/docs/visual-basic/misc/bc36009.md
+++ b/docs/visual-basic/misc/bc36009.md
@@ -1,5 +1,5 @@
 ---
-title: "' GoTo <linelabel>' non è valido perché '<linelabel>' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione"
+title: "'GoTo <linelabel>' non è valida perché '<linelabel>' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc36009
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36009
 ms.assetid: ebec3cac-d378-4e9b-a792-12e9ece5599e
-ms.openlocfilehash: 9c9b902e343f046b94512a97b2bbb868fb671340
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b3ab3a27dc3c3bbc4d44bf346204753c206b86a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633488"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379095"
 ---
-# <a name="goto-linelabel-is-not-valid-because-linelabel-is-inside-a-using-statement-that-does-not-contain-this-statement"></a>' GoTo \<etichettariga >' non è valido perché '\<etichettariga >' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione
+# <a name="goto-linelabel-is-not-valid-because-linelabel-is-inside-a-using-statement-that-does-not-contain-this-statement"></a>'GoTo \<linelabel>' non è valida perché '\<linelabel>' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione
 Un'istruzione `GoTo` all'esterno di un costruzione `Using` prova a diramarsi all'etichetta di una riga all'interno della costruzione.  
   
  Non sono consentite diramazioni dall'esterno di una costruzione `Using`...`End Using` all'interno della costruzione.  
@@ -31,5 +31,5 @@ Un'istruzione `GoTo` all'esterno di un costruzione `Using` prova a diramarsi all
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione GoTo](../../visual-basic/language-reference/statements/goto-statement.md)
-- [Istruzione Using](../../visual-basic/language-reference/statements/using-statement.md)
+- [Istruzione GoTo](../language-reference/statements/goto-statement.md)
+- [Istruzione using](../language-reference/statements/using-statement.md)
