--- a/docs/visual-basic/misc/bc36013.md
+++ b/docs/visual-basic/misc/bc36013.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36013
 ms.assetid: 5b399bf9-6595-46e0-a808-378f6c28568b
-ms.openlocfilehash: 5810ed72cd41411260be34993728af96fedcd8f8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 70e03a298bfe4d3898a5f8bb571735f6f73886f8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633529"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378802"
 ---
 # <a name="on-error-statements-are-not-valid-within-using-statements"></a>Le istruzioni 'On Error' non sono valide all'interno di istruzioni 'Using'
 Un'istruzione `On Error` viene visualizzata all'interno di un'istruzione `Using` ma non è valida in tale contesto.  
@@ -25,6 +25,6 @@ Un'istruzione `On Error` viene visualizzata all'interno di un'istruzione `Using`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione On Error](../../visual-basic/language-reference/statements/on-error-statement.md)
-- [Come usare il blocco try/catch per intercettare le eccezioni](../../standard/exceptions/how-to-use-the-try-catch-block-to-catch-exceptions.md)
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [Istruzione On Error](../language-reference/statements/on-error-statement.md)
+- [Come usare il blocco try/catch per rilevare le eccezioni](../../standard/exceptions/how-to-use-the-try-catch-block-to-catch-exceptions.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
