--- a/docs/visual-basic/misc/bc36589.md
+++ b/docs/visual-basic/misc/bc36589.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>'del metodo di estensione '<methodname>'definito '<typename>' non può essere dedotto
+title: Non è possibile dedurre il parametro di tipo '<typeparametername>' del metodo di estensione '<methodname>' definito in '<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36589
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC36589
 ms.assetid: 4676a7a5-934b-4b74-b640-48065fc07e94
-ms.openlocfilehash: 1d9fc33deb5bcdc879da3f10b36e6bff1df0f63b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 18f0b4d4f3df3e36b085fd89fb896c3861083c80
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632455"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377314"
 ---
-# <a name="type-parameter-typeparametername-for-extension-method-methodname-defined-in-typename-cannot-be-inferred"></a>Parametro di tipo '\<nomeparametrotipo >' del metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >' non può essere dedotto
+# <a name="type-parameter-typeparametername-for-extension-method-methodname-defined-in-typename-cannot-be-inferred"></a>Non è possibile dedurre il parametro di tipo '\<typeparametername>' del metodo di estensione '\<methodname>' definito in '\<typename>'
 È stato chiamato un metodo di estensione senza fornire un elenco di argomenti di tipo e l'inferenza del tipo non è riuscita per uno degli argomenti di tipo.  
   
- Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine. È però possibile omettere completamente l'elenco degli argomenti di tipo. In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).  
+ Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine. È però possibile omettere completamente l'elenco degli argomenti di tipo. In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).  
   
  **ID errore:** BC36589  
   
@@ -31,7 +31,7 @@ ms.locfileid: "64632455"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
