--- a/docs/visual-basic/misc/bc30086.md
+++ b/docs/visual-basic/misc/bc30086.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30086
 ms.assetid: 5e76b3c6-571f-4a6f-b524-26150cb6e986
-ms.openlocfilehash: 15dcda13f06060cd582f5b0837c06d5e8682e4b7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 826ed681dad8567fea635068bc1b64ce4d2e7b26
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935915"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380510"
 ---
 # <a name="else-must-be-preceded-by-a-matching-if-or-elseif"></a>'Else' deve essere preceduto da 'If' o 'ElseIf' corrispondente
 Un'istruzione `Else` si verifica senza un'istruzione `If` corrispondente. `Else` deve essere preceduto da un'istruzione `If` .  
@@ -29,4 +29,4 @@ Un'istruzione `Else` si verifica senza un'istruzione `If` corrispondente. `Else`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione If...Then...Else](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [Istruzione If...Then...Else](../language-reference/statements/if-then-else-statement.md)
