--- a/docs/visual-basic/misc/bc30237.md
+++ b/docs/visual-basic/misc/bc30237.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro già dichiarato con il nome '<argumentname>'
+title: Il parametro è già dichiarato con il nome ' <argumentname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30237
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30237
 ms.assetid: 98b7c153-1df5-4e0e-8296-5855ced04813
-ms.openlocfilehash: b0283c543531239fa66cc4a7a5af18fe513723ca
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 915174a3aeb53def4e121ab36d58366df7feae15
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64639160"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379913"
 ---
-# <a name="parameter-already-declared-with-name-argumentname"></a>Parametro già dichiarato con il nome '\<NomeArgomento >'
+# <a name="parameter-already-declared-with-name-argumentname"></a>Il parametro è già dichiarato con il nome ' \<argumentname> '
 Una dichiarazione di routine definisce due argomenti con lo stesso nome. Tutti i nomi di argomento in una dichiarazione di routine devono essere univoci.  
   
  **ID errore:** BC30237  
@@ -25,4 +25,4 @@ Una dichiarazione di routine definisce due argomenti con lo stesso nome. Tutti i
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
