--- a/docs/visual-basic/misc/bc30239.md
+++ b/docs/visual-basic/misc/bc30239.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30239
 ms.assetid: c5701568-77a1-441b-a0f7-f7b36cbd17e3
-ms.openlocfilehash: 75fbc065c3d89721e21c44924373a0e98c57219d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 40017e02fbe4e132e4021366d1e62c4e5098172c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625918"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379874"
 ---
 # <a name="relational-operator-expected"></a>È previsto l'operatore relazionale
 Un'istruzione `Case` contiene una clausola `Is` ma nessun operatore di confronto, ad esempio `=` o `>`. Se un'istruzione `Case` non include un operatore, si presuppone che sia `=` e non viene usato `Is` .  
@@ -25,6 +25,6 @@ Un'istruzione `Case` contiene una clausola `Is` ma nessun operatore di confronto
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [Operatori di confronto](../../visual-basic/language-reference/operators/comparison-operators.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Operatori di confronto](../language-reference/operators/comparison-operators.md)
