--- a/docs/visual-basic/misc/bc36001.md
+++ b/docs/visual-basic/misc/bc36001.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36001
 ms.assetid: d515daa2-f53d-424c-81fd-e9c4b12f331b
-ms.openlocfilehash: 3d24d7d732a04864cdab9a9938310fade9679ee2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d6f3ecc60e3ad5735689f5239bbdc922e606d992
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626483"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379406"
 ---
 # <a name="global-not-allowed-in-this-context-identifier-expected"></a>'Global' non consentito in questo contesto; previsto identificatore
-Il [Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names) parola chiave viene usata in un'istruzione in cui non è consentito.  
+La parola chiave [Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names) viene utilizzata in un'istruzione in cui non è consentita.  
   
  La parola chiave `Global` consente di accedere a uno spazio dei nomi definito all'esterno della relativa gerarchia in cui deve essere compilato il codice. `Global` definisce l'inizio del percorso di qualificazione al livello più esterno dello spazio dei nomi della libreria di classi .NET Framework.  
   
@@ -29,7 +29,7 @@ Il [Global](../programming-guide/program-structure/namespaces.md#global-keyword-
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parola chiave Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
-- [Istruzione Imports (tipo e spazio dei nomi .NET)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [Riferimenti e istruzione Imports](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+- [Global (parola chiave)](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
+- [Istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
+- [Riferimenti e istruzione Imports](../programming-guide/program-structure/references-and-the-imports-statement.md)
