--- a/docs/visual-basic/misc/bc36006.md
+++ b/docs/visual-basic/misc/bc36006.md
@@ -1,5 +1,5 @@
 ---
-title: Costruttore di attributo ha un parametro 'ByRef' di tipo '<typename>'; non è possibile usare i costruttori con parametri byref per applicare l'attributo
+title: Il costruttore di attributo ha un parametro 'ByRef' di tipo '<typename>'. Impossibile usare i costruttori con parametri byref per applicare l'attributo
 ms.date: 07/20/2015
 f1_keywords:
 - bc36006
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36006
 ms.assetid: 4c4e991f-3839-4196-bcfb-eb8464aa55e5
-ms.openlocfilehash: 0899812b7b80a96c28493f6effa99016e901679f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 91fa742f12a4c278a13f4432e1b90610c1bccecc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589465"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379160"
 ---
-# <a name="attribute-constructor-has-a-byref-parameter-of-type-typename-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a>Costruttore di attributo ha un parametro 'ByRef' di tipo '\<nomeTipo >'; non è possibile usare i costruttori con parametri byref per applicare l'attributo
+# <a name="attribute-constructor-has-a-byref-parameter-of-type-typename-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a>Il costruttore di attributo ha un parametro 'ByRef' di tipo '\<typename>'. Impossibile usare i costruttori con parametri byref per applicare l'attributo
 È possibile applicare l'attributo a un elemento di programmazione usando un costruttore di attributo che accetta un parametro `ByRef` .  
   
  Gli attributi vengono applicati in fase di compilazione ed è necessario che il compilatore passi valori concreti al costruttore di attributo. Un parametro `ByRef` accetta un puntatore a un valore che non può essere valutato in fase di compilazione.  
@@ -29,5 +29,5 @@ ms.locfileid: "64589465"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Passaggio di argomenti per valore e per riferimento](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
-- [ByRef](../../visual-basic/language-reference/modifiers/byref.md)
+- [Passaggio di argomenti per valore e per riferimento](../programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [ByRef](../language-reference/modifiers/byref.md)
