--- a/docs/visual-basic/misc/bc36011.md
+++ b/docs/visual-basic/misc/bc36011.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36011
 ms.assetid: 5db996a6-0802-4b67-91f1-4aa9c3dd6b09
-ms.openlocfilehash: b6688243667fc708c7e5a7915ebefdef39532ba4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 17bc09cdc8dd6ced106652b15a1b4c7b986c41e5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633793"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378965"
 ---
 # <a name="using-resource-variable-must-have-an-explicit-initialization"></a>La variabile di risorsa 'Using' deve avere un'inizializzazione esplicita
 Un'istruzione `Using` specifica almeno una risorsa che non viene inizializzata con la clausola `New` .  
@@ -35,6 +35,6 @@ Un'istruzione `Using` specifica almeno una risorsa che non viene inizializzata c
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Using](../../visual-basic/language-reference/statements/using-statement.md)
-- [Operatore New](../../visual-basic/language-reference/operators/new-operator.md)
-- [Procedura: Eliminare una risorsa di sistema](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [Istruzione using](../language-reference/statements/using-statement.md)
+- [Operatore New](../language-reference/operators/new-operator.md)
+- [Procedura: eliminare una risorsa di sistema](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
