--- a/docs/visual-basic/misc/bc36554.md
+++ b/docs/visual-basic/misc/bc36554.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36554
 ms.assetid: 0778a854-246f-4c2b-943d-ea8883b3aa6f
-ms.openlocfilehash: d35662ce62b3f501a3699570084231f87bad2d79
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 2b78855c52afb3cfe9c16a2b05c78e7d7524825c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512990"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378445"
 ---
 # <a name="paramarray-cannot-be-applied-to-the-first-parameter-of-an-extension-method"></a>Impossibile applicare 'ParamArray' al primo parametro di un metodo di estensione
 
@@ -51,6 +51,6 @@ Il primo parametro di un metodo di estensione specifica il tipo di dati che il m
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Matrici di parametri](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [Parametri facoltativi](../../visual-basic/programming-guide/language-features/procedures/optional-parameters.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Matrici di parametri](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [Parametri facoltativi](../programming-guide/language-features/procedures/optional-parameters.md)
