--- a/docs/visual-basic/misc/bc36559.md
+++ b/docs/visual-basic/misc/bc36559.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile utilizzare la proprietà di<propertyname>membro di tipo anonimo '' per dedurre il tipo di un'altra proprietà del membro<propertyname>perché il tipo di '' non è ancora stabilito
+title: Impossibile usare la proprietà di membro di tipo anonimo '<propertyname>' per dedurre il tipo di un'altra proprietà di membro perché il tipo di '<propertyname>' non è ancora stabilito
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36559
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36559
 ms.assetid: 58ab8d35-9d85-4aca-8b4e-f232d7e4af61
-ms.openlocfilehash: f502c886eb7ac5418d492e958e86aed96672ff4e
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: b87f5de3138ce5b3c5ad37decd2b47deb8f62946
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512690"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378298"
 ---
-# <a name="anonymous-type-member-property-propertyname-cannot-be-used-to-infer-the-type-of-another-member-property-because-the-type-of-propertyname-is-not-yet-established"></a>Non è possibile usare la\<proprietà' propertyName >' del membro di tipo anonimo per dedurre il tipo di un'altra proprietà\<del membro perché il tipo di ' propertyName >' non è ancora stabilito
+# <a name="anonymous-type-member-property-propertyname-cannot-be-used-to-infer-the-type-of-another-member-property-because-the-type-of-propertyname-is-not-yet-established"></a>Impossibile usare la proprietà di membro di tipo anonimo '\<propertyname>' per dedurre il tipo di un'altra proprietà di membro perché il tipo di '\<propertyname>' non è ancora stabilito
 
 Fino a quando non viene stabilito il tipo di una proprietà di tipo anonimo, non può essere usata per stabilire il tipo di un'altra proprietà. Ad esempio, nella dichiarazione seguente `.IDName = .LastName` non è valido perché `.LastName` non è ancora stato inizializzato.
 
@@ -35,5 +35,5 @@ Dim anon1 = New With {Key .IDName = .LastName, Key .LastName = "Jones"}
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [Procedura: Deduce i tipi e i nomi di proprietà nelle dichiarazioni di tipo anonimo](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [Tipi anonimi](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
