--- a/docs/visual-basic/misc/bc36572.md
+++ b/docs/visual-basic/misc/bc36572.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>' non può essere dedotto
+title: Non è possibile dedurre il parametro di tipo '<typeparametername>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc36572
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC36572
 ms.assetid: 02264070-b055-4ab0-8d2a-eac4d90d9fdf
-ms.openlocfilehash: 199fc71b244e82be258b9fc41dfbfb191a2371fe
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 30f8e56da50251a6c142f1f51c2b45da989670ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913146"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377925"
 ---
-# <a name="type-parameter-typeparametername-cannot-be-inferred"></a>Parametro di tipo '\<nomeparametrotipo >' non può essere dedotto
+# <a name="type-parameter-typeparametername-cannot-be-inferred"></a>Non è possibile dedurre il parametro di tipo '\<typeparametername>'
 È stata chiamata una routine generica senza fornire un elenco di argomenti di tipo e l'inferenza del tipo non riesce per uno degli argomenti di tipo.  
   
- Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine. È però possibile omettere completamente l'elenco degli argomenti di tipo. In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).  
+ Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine. È però possibile omettere completamente l'elenco degli argomenti di tipo. In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).  
   
  **ID errore:** BC36572  
   
@@ -31,6 +31,6 @@ ms.locfileid: "64913146"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
