--- a/docs/visual-basic/misc/bc36578.md
+++ b/docs/visual-basic/misc/bc36578.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36578
 ms.assetid: 881b3009-0c9e-4676-b172-c6aabd14ed14
-ms.openlocfilehash: 3491704a22076883afec8c61911af0fcb9dff4cd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 194bffc4ada0c0be984cc0125008e898dd4d18ea
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623493"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377678"
 ---
 # <a name="too-few-type-arguments"></a>Argomenti di tipo insufficienti
 È stato richiamato un metodo generico con meno argomenti di tipo rispetto ai parametri di tipo.  
@@ -27,6 +27,6 @@ ms.locfileid: "64623493"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
