--- a/docs/visual-basic/misc/bc36581.md
+++ b/docs/visual-basic/misc/bc36581.md
@@ -1,5 +1,5 @@
 ---
-title: Gli argomenti del metodo di estensione di tipo '<methodName>'definito '<typeName>'non è possibile dedurre dal delegato'<delegateName>'
+title: <methodName>Non è stato possibile dedurre gli argomenti di tipo per il metodo di estensione '' definito in ' <typeName> ' dal delegato ' <delegateName> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36581
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36581
 ms.assetid: 2bb9ca8d-7293-40e9-9285-e20b8254b3af
-ms.openlocfilehash: 05f40b45b454a0013bbbb11e9676b19c0583a17d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e545f3087094a716ea332211b80d438620dee7ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970781"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377535"
 ---
-# <a name="type-arguments-for-extension-method-methodname-defined-in-typename-could-not-be-inferred-from-the-delegate-delegatename"></a>Gli argomenti del metodo di estensione di tipo '\<NomeMetodo >' definito in '\<nomeTipo >' non è possibile dedurre dal delegato '\<NomeDelegato >'
+# <a name="type-arguments-for-extension-method-methodname-defined-in-typename-could-not-be-inferred-from-the-delegate-delegatename"></a>\<methodName>Non è stato possibile dedurre gli argomenti di tipo per il metodo di estensione '' definito in ' \<typeName> ' dal delegato ' \<delegateName> '
 
 Un'istruzione di assegnazione usa `AddressOf` per assegnare l'indirizzo di un metodo di estensione generico a un delegato, ma non fornisce alcun argomento di tipo al metodo generico.
 
@@ -28,8 +28,8 @@ Di norma, quando si richiama un metodo generico, si fornisce un argomento di tip
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Operatore AddressOf](../../visual-basic/language-reference/operators/addressof-operator.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Operatore AddressOf](../language-reference/operators/addressof-operator.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
