--- a/docs/visual-basic/misc/bc36582.md
+++ b/docs/visual-basic/misc/bc36582.md
@@ -1,5 +1,5 @@
 ---
-title: Numero eccessivo di argomenti al metodo di estensione '<methodname>'definito '<typename>'
+title: Troppi argomenti per il metodo di estensione ' <methodname> ' definito in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36582
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36582
 ms.assetid: e91fd85b-6853-4377-b1d2-367752f8deec
-ms.openlocfilehash: d3da9de9301c04487c9aa2a02af1205e3a42228c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea4b50274f0959a75bd36874f6e66528c812a4cf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663634"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377496"
 ---
-# <a name="too-many-arguments-to-extension-method-methodname-defined-in-typename"></a>Numero eccessivo di argomenti al metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'
+# <a name="too-many-arguments-to-extension-method-methodname-defined-in-typename"></a>Troppi argomenti per il metodo di estensione ' \<methodname> ' definito in ' \<typename> '
 Il numero di argomenti forniti in una chiamata a un metodo di estensione supera il numero di argomenti definiti per la routine.  
   
  **ID errore:** BC36582  
@@ -25,5 +25,5 @@ Il numero di argomenti forniti in una chiamata a un metodo di estensione supera 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
