--- a/docs/visual-basic/misc/bc36584.md
+++ b/docs/visual-basic/misc/bc36584.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro '<parametername>'nel metodo di estensione'<methodname>'definito '<typename>' ha già un argomento corrispondente
+title: Il parametro '<parametername>' del metodo di estensione '<methodname>' definito in '<typename>' ha già un argomento corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36584
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36584
 ms.assetid: 0dbc4e18-407a-4a18-82d2-26ee14f82da4
-ms.openlocfilehash: fbaab8554a36c0c8283524533bed4948021149d9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e89e91e0203ddd1fe0436f91f3966ee6f5ea2b45
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619152"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377444"
 ---
-# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-argument"></a>Parametro '\<nomeparametro >' nel metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >' ha già un argomento corrispondente
+# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-argument"></a>Il parametro '\<parametername>' del metodo di estensione '\<methodname>' definito in '\<typename>' ha già un argomento corrispondente
 Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.  
   
  **ID errore:** BC36584  
@@ -27,5 +27,5 @@ Un argomento viene passato in base al nome più di una volta nella stessa chiama
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
