--- a/docs/visual-basic/misc/bc36590.md
+++ b/docs/visual-basic/misc/bc36590.md
@@ -1,5 +1,5 @@
 ---
-title: Numero insufficiente di argomenti tipo per il metodo di estensione '<methodname>'definito '<typename>'
+title: Argomenti di tipo insufficienti nel metodo di estensione ' <methodname> ' definito in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36590
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36590
 ms.assetid: 8a9dd2d3-d8af-4ef5-8427-eb6e83d16230
-ms.openlocfilehash: bbda7d705f979abdad42e272272cc627c837dacd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: dabcf49ff1ca84901c066a8cae8081d715e14ce5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632292"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377288"
 ---
-# <a name="too-few-type-arguments-to-extension-method-methodname-defined-in-typename"></a>Numero insufficiente di argomenti tipo per il metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'
+# <a name="too-few-type-arguments-to-extension-method-methodname-defined-in-typename"></a>Argomenti di tipo insufficienti nel metodo di estensione ' \<methodname> ' definito in ' \<typename> '
 È stato richiamato un metodo di estensione generico con meno argomenti di tipo rispetto ai parametri di tipo nella definizione del metodo.  
   
  Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.  
@@ -27,7 +27,7 @@ ms.locfileid: "64632292"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
